unpackaged/objects/Adam_Bar__c.object
<CustomObject>
    <fields>
        <fullName>Adam_Bar_Picklist__c</fullName>
        <label>Adam Bar Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>default</fullName>
                    <default>true</default>
                    <label>default</label>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>A123456</fullName>
                    <label>123</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Referral Source</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>controller__c</fullName>
        <label>controller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dependent__c</fullName>
        <label>dependent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controller__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one_112311</fullName>
                </value>
                <value>
                    <fullName>one_80989</fullName>
                </value>
                <value>
                    <fullName>two_090998</fullName>
                </value>
                <value>
                    <fullName>two_8978789</fullName>
                </value>
                <value>
                    <fullName>two_987878</fullName>
                </value>
                <value>
                    <fullName>three_098909</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dominant__c</fullName>
        <label>dominant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>first</fullName>
                </value>
                <value>
                    <fullName>second</fullName>
                </value>
                <value>
                    <fullName>third</fullName>
                </value>
                <value>
                    <fullName>fourth</fullName>
                </value>
                <value>
                    <fullName>fifth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iscontrolled__c</fullName>
        <label>iscontrolled</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>dominant__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>first_88090989</fullName>
                </value>
                <value>
                    <fullName>first_0980990</fullName>
                </value>
                <value>
                    <fullName>third_0980909890</fullName>
                </value>
                <value>
                    <fullName>fourth_09090808</fullName>
                </value>
                <value>
                    <fullName>fifth_989809890</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>magic_number__c</fullName>
        <defaultValue>99</defaultValue>
        <label>magic number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subservient__c</fullName>
        <label>subservient</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controller__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one_98989</fullName>
                </value>
                <value>
                    <fullName>two_09809890</fullName>
                </value>
                <value>
                    <fullName>three_80980989</fullName>
                </value>
                <value>
                    <fullName>three_9890890</fullName>
                </value>
                <value>
                    <fullName>four_0989090</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Adam Bar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_New_Queue_Adam_Bar</fullName>
        <filterScope>Queue</filterScope>
        <label>My New Queue</label>
        <queue>My_New_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Adam Bar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adam Bars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>